# fastapi-auth

./: .coverage  .coveragerc  CHANGES.txt  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: python-app.yml
fastapi_auth/: auth_config.py  auth_routes.py  authenticator_registry.py  demo_app.py  dependencies.py  jinja2_templates.py  logger.py  permissions.py  roles.py  user_cmd.py  user_management.py  user_management_sqlobject.py  users.py
fastapi_auth/templates/: base.html  demo.html  login.html
fastapi_auth/tests/: conftest.py  test_authenticator_registry.py  test_dependency.py  test_login.py  test_permissions.py  test_roles.py  test_user_management_sqlobject.py  test_users.py
